# cookiecutter-hypermodern-python

./: README.md
.github/workflows/: update-instance.yml
{{cookiecutter.project_name}}/: CONTRIBUTING.md  Makefile  README.md  make.bat  pyproject.toml
{{cookiecutter.project_name}}/.github/: dependabot.yml
{{cookiecutter.project_name}}/.github/workflows/: release.yml  tests.yaml
{{cookiecutter.project_name}}/docs/: usage.md
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/: __init__.py  __main__.py
